piksi-settings -> swift-settings

--- a/.cargo/config
+++ b/.cargo/config
@@ -12,4 +12,4 @@ rustflags = [
 
 [alias]
 fileio = "run --bin fileio --no-default-features --features env_logger,indicatif --"
-settings = "run --bin piksi-settings --no-default-features --features env_logger --"
+settings = "run --bin swift-settings --no-default-features --features env_logger --"
