--- a/.cargo/config
+++ b/.cargo/config
@@ -11,5 +11,5 @@ rustflags = [
 ]
 
 [alias]
-fileio = "run --bin fileio --no-default-features --features env_logger,indicatif --"
+files = "run --bin swift-files --no-default-features --features env_logger,indicatif --"
 settings = "run --bin swift-settings --no-default-features --features env_logger --"
