Rename cli tools/cleanup cli args [CPP-633] [CPP-655] (#417)
* rename piksi-settings -> swift-settings

* rename fileio -> swift-files

* replace subcommand style connection inputs with flags

--- a/.cargo/config
+++ b/.cargo/config
@@ -11,5 +11,5 @@ rustflags = [
 ]
 
 [alias]
-fileio = "run --bin fileio --no-default-features --features env_logger,indicatif --"
-settings = "run --bin piksi-settings --no-default-features --features env_logger --"
+files = "run --bin swift-files --no-default-features --features env_logger,indicatif --"
+settings = "run --bin swift-settings --no-default-features --features env_logger --"
