--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -73,14 +73,14 @@ name = "cpu_benches"
 harness = false
 
 [[bin]]
-name = "piksi-settings"
+name = "swift-settings"
 path = "src/bin/settings.rs"
 bench = false
 required-features = ["env_logger"]
 
 [[bin]]
-name = "fileio"
-path = "src/bin/fileio.rs"
+name = "swift-files"
+path = "src/bin/files.rs"
 bench = false
 required-features = ["env_logger", "indicatif"]
 
