build mac tools

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -277,18 +277,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build ${{ runner.os }} Binaries.
-        env:
-          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
+      - name: Set env vars
+        shell: bash
         run: |
-          cargo make create-dist
+          echo "LIBCLANG_PATH=$LIBCLANG_PATH_WIN" >>$GITHUB_ENV
         if: matrix.os.name == 'windows-2019'
 
       - name: Build ${{ runner.os }} Binaries.
         shell: bash
         run: |
           cargo make create-dist
-        if: matrix.os.name != 'windows-2019'
 
       - name: Create ${{ runner.os }} Installers.
         shell: bash
@@ -308,29 +306,11 @@ jobs:
 
       - name: Build ${{ runner.os }} swift-files binary.
         run: |
-          cargo build --bin swift-files --features="env_logger,indicatif" --release
-        # Building on Mac currently not working (DEVINFRA-612)
-        if: matrix.os.name != 'windows-2019' && matrix.os.name != 'macos-10.15'
-
-      - name: Build ${{ runner.os }} swift-files binary.
-        run: |
-          cargo build --bin swift-files --features="env_logger,indicatif" --release
-        env:
-          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
-        if: matrix.os.name == 'windows-2019'
+          cargo build --release --bin swift-files --no-default-features --features env_logger,indicatif
 
       - name: Build ${{ runner.os }} swift-settings binary.
         run: |
-          cargo build --bin swift-settings --features="env_logger" --release
-        # Building on Mac currently not working (DEVINFRA-612)
-        if: matrix.os.name != 'windows-2019' && matrix.os.name != 'macos-10.15'
-
-      - name: Build ${{ runner.os }} swift-settings binary.
-        run: |
-          cargo build --bin swift-settings --features="env_logger" --release
-        env:
-          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
-        if: matrix.os.name == 'windows-2019'
+          cargo build --release --bin swift-settings --features env_logger
 
       - name: Pull Git LFS objects
         run: git lfs pull
