--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ env:
   CARGO_INCREMENTAL: 0
   RUSTFLAGS: "-C debuginfo=0"
   APP_NAME: swift-console
+  APP_BUNDLE_ID: com.swift-nav.SwiftConsole
 
 jobs:
 
@@ -302,7 +303,7 @@ jobs:
           fi
           echo $INSTALLER_ARCHIVE >installer-archive.filename
           echo "INSTALLER_ARCHIVE=$(cat installer-archive.filename)" >>$GITHUB_ENV
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags') && matrix.os.name != 'macos-10.15'
 
       - name: Build ${{ runner.os }} swift-files binary.
         run: |
@@ -351,6 +352,13 @@ jobs:
           path: ./target/release/swift-settings${{ matrix.os.exe_suffix }}
       - uses: actions/upload-artifact@v2
         with:
+          name: ${{ runner.os }}-installer
+          path: |
+            ${{ env.INSTALLER_ARCHIVE }}
+            installer-archive.filename
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags') && matrix.os.name != 'macos-10.15'
+      - uses: actions/upload-artifact@v2
+        with:
           name: ${{ runner.os }}-artifacts-debug
           path: |
             ${{ env.DEBUG_ARCHIVE }}
@@ -367,13 +375,98 @@ jobs:
         shell: bash
         run: |
           cargo make disk-usage-bench
+
+  sign_application:
+    name: Sign Application
+    timeout-minutes: 30
+    needs:
+      - build
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    strategy:
+      matrix:
+        os:
+          - macOS
+    runs-on: [self-hosted, '${{ matrix.os }}', code-signer]
+    steps:
+
+      - name: Remove previous build.
+        shell: bash
+        continue-on-error: true
+        run: |
+          rm -rf application
+
+      - name: Checkout source.
+        uses: actions/checkout@v2
+        with:
+          path: application
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: ${{ matrix.os }}-artifacts
+          path: |
+            application
+
+      - name: Unzip release artifact.
+        shell: bash
+        run: |
+          cd application
+          mkdir -p py39-dist
+          tar -xvf "$(cat release-archive.filename)" -C py39-dist
+
+      - name: Build .app bundle.
+        shell: bash
+        run: |
+          cd application
+          cargo make dist-to-installer-app
+      
+      - name: Sign application.
+        shell: bash
+        run: |
+          cd "application/target/installer/Swift Console.app"
+          for f in $(find Contents/Resources/lib/ -name '*.dylib' -or -name '*.so')
+          do 
+            codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+            --timestamp \
+            "$f"
+          done
+
+          for f in $(ls Contents/Resources/lib/python3.9/site-packages/PySide2/Qt/lib/*.framework/Versions/5/*)
+          do
+            codesign \
+              -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+              --timestamp \
+              "$f"
+          done
+
+          cd ../../../
+          codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" --deep \
+            --entitlements installers/macOS/entitlements.plist \
+            --timestamp \
+            --options=runtime \
+            "target/installer/Swift Console.app"
+
+      - name: Build dmg file.
+        shell: bash
+        run: |
+          cd application
+          cargo make store-version
+          cargo make dist-to-installer-dmg
+
+      - name: Add archive to path.
+        shell: bash
+        run: |
+          INSTALLER_ARCHIVE=$(find application -iname "*.dmg")
+          echo $INSTALLER_ARCHIVE >installer-archive.filename
+          echo "INSTALLER_ARCHIVE=$(cat installer-archive.filename)" >>$GITHUB_ENV
+
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-installer
           path: |
             ${{ env.INSTALLER_ARCHIVE }}
             installer-archive.filename
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
 
   frontend_bench:
     name: Run Frontend Benchmarks
@@ -460,33 +553,68 @@ jobs:
     name: Sign Installers
     timeout-minutes: 30
     needs:
+      - sign_application
       - frontend_bench
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     strategy:
       matrix:
         os:
           - Windows
+          - macOS
     runs-on: [self-hosted, '${{ matrix.os }}', code-signer]
     steps:
 
       - name: Remove previous build.
         shell: bash
+        continue-on-error: true
         run: |
-          rm -r *
+          rm -rf installer
 
       - uses: actions/download-artifact@v2
         with:
           name: ${{ matrix.os }}-installer
+          path: |
+            installer
 
       - name: Sign Installer.
         shell: cmd
         run: |
+          cd installer
           set /p executable=<installer-archive.filename
-          "${{ env.CODE_SIGNER_PATH_WIN }}" sign /debug /v /n "Swift Navigation, Inc." /a /tr http://rfc3161timestamp.globalsign.com/advanced /td SHA256 %executable%
+          "${{ env.CODE_SIGNER_PATH_WIN }}" sign ^
+            /debug /v ^
+            /n "Swift Navigation, Inc." /a ^
+            /tr http://rfc3161timestamp.globalsign.com/advanced ^
+            /td SHA256 %executable%
+        if: matrix.os == 'Windows'
+
+      - name: Sign Installer.
+        shell: bash
+        run: |
+          cd installer
+          codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+            -f --timestamp \
+            $(cat installer-archive.filename)
+          xcrun altool \
+            --notarize-app \
+            --file $(cat installer-archive.filename) \
+            --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
+            --apiKey ${{ secrets.APPLE_KEY_ID }} \
+            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+        if: matrix.os == 'macOS'
 
       - name: Add archive to path.
         shell: bash
         run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              INSTALLER_ARCHIVE=$(find installer -iname "*.deb")
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              INSTALLER_ARCHIVE=$(ls installer/installers/Windows/*.exe)
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+              INSTALLER_ARCHIVE=$(find installer -iname "*.dmg")
+          fi
+          echo $INSTALLER_ARCHIVE >installer-archive.filename
           echo "INSTALLER_ARCHIVE=$(cat installer-archive.filename)" >>$GITHUB_ENV
 
       - uses: actions/upload-artifact@v2
