--- a/Makefile.toml
+++ b/Makefile.toml
@@ -18,15 +18,17 @@ elseif eq ${os} linux
   if eq ${processor} "x86_64"
     set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
     set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
+    set_env LINUX_ARCH "linux_x86_64"
   elseif starts_with ${processor} "armv7"
     set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-armv7-unknown-linux-gnueabihf-lto-20220203T2103.tar.zst"
     set_env PYSIDE2_RCC "pyrcc5"
+    set_env LINUX_ARCH "linux_armv7"
   else
     trigger_error "unknown processor architecture"
   end
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
-  set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-linux_x86_64.whl
+  set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-${LINUX_ARCH}.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config_console.txt"
   output = exec --fail-on-error gcc -dumpmachine
@@ -719,7 +721,7 @@ fpm \
   --description "$DESCRIPTION" \
   --url "$HOMEPAGE" \
   --version "$VERSION" \
-  --package "${APP_DIR_NAME}_${VERSION}_linux.deb" \
+  --package "${APP_DIR_NAME}_${VERSION}_${LINUX_ARCH}.deb" \
   --chdir "$TMP_DIR" \
   --name "$APP_DIR_NAME" \
   "$OPT_DIR" \
