New code-signer path for win64.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ env:
   PIP_CACHE_DIR: ~/.cache/pip
   RUST_CACHE_DIRS: "~/.cargo/registry\n~/.cargo/git\ntarget\n"
   LIBCLANG_PATH_WIN: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Tools/Llvm/x64/bin"
-  CODE_SIGNER_PATH_WIN: "C:/Program Files/Windows Kits/10/bin/x86/signtool.exe"
+  CODE_SIGNER_PATH_WIN: "%win10sdk%/x64/signtool.exe"
   CARGO_MAKE_VERSION: 0.35.0
   CARGO_INCREMENTAL: 0
   RUSTFLAGS: "-C debuginfo=0"
