--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -41,7 +41,7 @@ parking_lot = "0.12.0"
 regex = { version = "1.5.5" }
 rust-ini = "0.18.0"
 sbp = { version = "4.1.4", features = ["json", "link", "swiftnav"] }
-sbp-settings = { git = "https://github.com/swift-nav/libsettings-rs", branch = "john-michaelburke/cpp-693" }
+sbp-settings = "0.6.8"
 env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
 curl = { version = "0.4", features = ["ssl", "static-curl"] }
