--- a/installers/macOS/Info.plist
+++ b/installers/macOS/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>CFBundleIconFile</key>
 	<string>Swift Console.icns</string>
+	<key>NSHighResolutionCapable</key>
+	<string>True</string>
 </dict>
 </plist>
