Add a target that cleans the back end
This was needed to quickly rebuild and apply changes to the back end.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -296,6 +296,12 @@ cwd = "console_backend"
 command = "${DIST_PYTHON}"
 args = ["setup.py", "-vv", "bdist_wheel"]
 
+[tasks.clean-backend]
+dependencies = ["dist-install-pip-setuptools-rust"]
+cwd = "console_backend"
+command = "${DIST_PYTHON}"
+args = ["setup.py", "-vv", "clean"]
+
 [tasks.get-get-pip]
 script_runner = "@duckscript"
 script = '''
